samples/_failures_safe/1761700779_f0fc18_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_66fb0f6e.c: In function ‘main’:
./samples/SAFE/__tmp_66fb0f6e.c:151:43: error: missing terminating " character
  151 |                     print_matrix(&result, "A
      |                                           ^~
./samples/SAFE/__tmp_66fb0f6e.c:151:21: error: expected expression at end of input
  151 |                     print_matrix(&result, "A
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_66fb0f6e.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_66fb0f6e.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_66fb0f6e.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_66fb0f6e.c:151:21: error: expected declaration or statement at end of input
